--- a/index.html
+++ b/index.html
@@ -139,11 +139,14 @@
 最近では、ネット証券などで「1株から買えるサービス」も広がってきました。少額から始めてみたい人には、そうしたサービスもおすすめです。
 
     </div>
-	
+
+ <div class="text-block">
+<b>● 少しの株でも、大切な一歩</b>
+    </div>
+	  
 <img src="level02-05/03.png" alt="株主になるということ" class="content-image">
     <div class="text-block">
-	
-<b>● 少しの株でも、大切な一歩</b>
+
 <br>&nbsp;<br>
 たとえば、1株や数株しか持っていなくても、あなたはその会社を応援する「株主」です。会社がどんなことをしているのかを知るきっかけになったり、社会や経済の動きに関心を持てるようになったりします。
 <br>&nbsp;<br>
