--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
     <img src="level02-05/01.png" alt="株主の権利" class="content-image">
 
     <div class="text-block">
-     株主は、会社にお金を出して応援している人。その会社の未来を信じて「出資」しているわけだから、会社から見ると“オーナーの一員”という立場になります。
+     株主は、会社にお金を出して応援している人。その会社の未来を信じて「出資」しているわけだから、会社から見ると<b>“オーナーの一員”という立場</b>になります。
 <br>&nbsp;<br>
 そのため、株主には次のような「権利」があります。
 <br>&nbsp;<br>
-・会社の大切な方針について話し合う<b>「株主総会」に参加できる</b><br>&nbsp;<br>
-・株主総会で提案された議案に対して賛成・反対の意思表示をできる（<b>議決権</b>）<br>&nbsp;<br>
-・会社の利益や活動を知るための<b>情報を見ることができる</b>
+<b>・会社の大切な方針について話し合う「株主総会」に参加できる<br>&nbsp;<br>
+・株主総会で提案された議案に対して賛成・反対の意思表示をできる（議決権）<br>&nbsp;<br>
+・会社の利益や活動を知るための情報を見ることができる</b>
 <br>&nbsp;<br>
 <b>● 保有株数と議決権の関係</b>
     </div>
@@ -108,14 +108,14 @@
 	 <img src="level02-05/02.png" alt="議決権について" class="content-image">
 
     <div class="text-block">
-     会社の決まりごとは、多くの場合「投票」で決まります。一般的に、株主は保有する株式1株につき1票の議決権を持ちます。（<b>1株1議決権の原則</b>）
+     会社の決まりごとは、多くの場合「投票」で決まります。一般的に、<b>株主は保有する株式1株につき1票の議決権を持ちます</b>。（<b>1株1議決権の原則</b>）
 <br>&nbsp;<br>
 たとえば…<br>
 ・1株 → 1票<br>
 ・100株 → 100票<br>
 ・1万株 → 1万票
 <br>&nbsp;<br>
-というように、たくさん株を持っている人ほど、会社の方針に対して強い発言力をもてるようになります。 </div>
+というように、<b>たくさん株を持っている人ほど、会社の方針に対して強い発言力をもてるようになります</b>。 </div>
 
     <img src="level02-05/talk02.svg" alt="カブちゃんととうしくんの会話02" class="content-image">
 
@@ -132,7 +132,7 @@
 <br>&nbsp;<br>
 株を買うときは、ほとんどの会社が「<b>売買単位</b>」を設けています。たとえば、「100株単位」と決まっていれば、100株まとめて買わないといけません。
 <br>&nbsp;<br>
-つまり、1株が2,000円の株なら、「2,000円 × 100株 ＝ 20万円」が最低購入金額ということになります。
+つまり、<b>1株が2,000円の株なら、「2,000円 × 100株 ＝ 20万円」が最低購入金額</b>ということになります。
 <br>&nbsp;<br>
 ほとんどの上場企業は「100株単位」が基本なので、1社に投資するには、10万円〜30万円ほど必要になるケースが多いです。
 <br>&nbsp;<br>
@@ -146,8 +146,6 @@
 	  
 <img src="level02-05/03.png" alt="株主になるということ" class="content-image">
     <div class="text-block">
-
-<br>&nbsp;<br>
 たとえば、1株や数株しか持っていなくても、あなたはその会社を応援する「株主」です。会社がどんなことをしているのかを知るきっかけになったり、社会や経済の動きに関心を持てるようになったりします。
 <br>&nbsp;<br>
 つまり、株を持つということは、<b>会社とのつながりができる</b>ということ。それだけでも、学べることや感じられることはたくさんあるのです。
